--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
+# ################################################
+# # Propriedades do ambiente de desenvolvimento ##
+# ################################################
+
+# modo de operação do hibernate
+# https://springhow.com/spring-boot-database-initialization/
 spring.jpa.hibernate.ddl-auto=update
+
+# Aqui é string de conexão. O nome lp3 ao final indica o nome do database que será utilizado
+# No MySQL você pode usar o comando "create database lp3" para criar uma nova base de dados
+spring.datasource.url=jdbc:mysql://localhost:3306/lp3
+
+# nome do usuário e senha
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/lp3
-spring.main.lazy-initialization=true
+# spring.datasource.password=alunoinfo 		# para uso nos laboratórios do if
