--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 # # Propriedades do ambiente de desenvolvimento ##
 # ################################################
 
-# modo de operação do hibernate
+# modo de operacao do hibernate
 # https://springhow.com/spring-boot-database-initialization/
 spring.jpa.hibernate.ddl-auto=update
 
-# Aqui é string de conexão. O nome lp3 ao final indica o nome do database que será utilizado
-# No MySQL você pode usar o comando "create database lp3" para criar uma nova base de dados
+# String de conexao. O nome lp3 ao final indica o nome do database que sera utilizado
+# No MySQL voce pode usar o comando "create database lp3" para criar uma nova base de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/lp3
 
-# nome do usuário e senha
+# nome do usuario e senha
 spring.datasource.username=root
 spring.datasource.password=root
-# spring.datasource.password=alunoinfo 		# para uso nos laboratórios do if
+# spring.datasource.password=alunoinfo 		# para uso nos laboratorios do if
